review-evidence/r3/pr-4231/logs/baseline/envoy-routes.json
{
 "configs": [
  {
   "@type": "type.googleapis.com/envoy.admin.v3.RoutesConfigDump.DynamicRouteConfig",
   "route_config": {
    "@type": "type.googleapis.com/envoy.config.route.v3.RouteConfiguration",
    "name": "higress-rds-80.pr4231.example",
    "virtual_hosts": [
     {
      "name": "pr4231.example:80",
      "domains": [
       "pr4231.example"
      ],
      "routes": [
       {
        "match": {
         "case_sensitive": true,
         "path_separated_prefix": "/r3"
        },
        "route": {
         "cluster": "UnknownService",
         "timeout": "0s",
         "retry_policy": {
          "retry_on": "connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes",
          "num_retries": 2,
          "retry_host_predicate": [
           {
            "name": "envoy.retry_host_predicates.previous_hosts",
            "typed_config": {
             "@type": "type.googleapis.com/envoy.extensions.retry.host.previous_hosts.v3.PreviousHostsPredicate"
            }
           }
          ],
          "host_selection_retry_max_attempts": "5",
          "retriable_request_headers": [
           {
            "name": ":method",
            "invert_match": true,
            "string_match": {
             "safe_regex": {
              "google_re2": {},
              "regex": "POST|PATCH|LOCK"
             }
            }
           }
          ]
         },
         "cluster_not_found_response_code": "INTERNAL_SERVER_ERROR",
         "max_grpc_timeout": "0s"
        },
        "metadata": {
         "filter_metadata": {
          "istio": {
           "config": "/apis/networking.istio.io/v1/namespaces/higress-system/virtual-service/higress-system~higress-gateway-istio-autogenerated-k8s-gateway-http~pr4231.example"
          }
         }
        },
        "decorator": {
         "operation": "higress-system~higress-gateway-istio-autogenerated-k8s-gateway-http~pr4231.example:80/*"
        },
        "name": "pr4231-higress-service"
       }
      ],
      "include_request_attempt_count": true
     }
    ],
    "validate_clusters": false,
    "max_direct_response_body_size_bytes": 1048576,
    "ignore_port_in_host_matching": true
   },
   "last_updated": "2026-08-29T16:29:35.681Z"
  }
 ]
}
